ignite-4374: Extract JVM-options to separate class